--- a/chickenrun.html
+++ b/chickenrun.html
@@ -15,13 +15,14 @@
     </header>    
 
 <h1 class="job_title">
-    Chicken Run
+    Chicken Run!
 </h1>
         <p class="job_text">
-            "Chicken Run" is an engaging P5.js game where players take on the role of a courageous chicken with a mission to collect corn while outsmarting crafty foxes. It offers a blend of fun and challenge, providing an exciting gameplay experience that keeps players hooked. The objective of the game is to gather as much corn as possible while avoiding the foxes. Players need to be quick in order to outmaneuver the foxes and stay safe to reach the end goal. What makes the game even more thrilling is the progressive difficulty. As you play, the number of foxes gradually increases, creating a more intense and challenging environment. This adds an extra layer of excitement to the gameplay, and urges the player to reach the end score of 50 before the foxes take over.
+            "Chicken Run" is an engaging P5.js (variation of JavaScript) game where users play as a chicken with a mission to collect corn while avoiding the hungry foxes. The game offers an addictive gaming experience- ensuring that winning is not too hard or too easy. The objective of the game is to gather as much corn as possible while avoiding the foxes. Players need to be quick in order to outmaneuver the foxes and stay safe to reach the end goal. What makes the game even more thrilling is the progressive difficulty. As you play, the number of foxes gradually increases, creating a more intense and challenging environment.
         </p>
-
+        <div id="iframe-container">
         <iframe src="https://editor.p5js.org/sabrinadragani/full/I4ZH4Njrg"></iframe>
+        </div>
 <footer>
     Sabrina's Studio ® 2023
 </footer>
