--- a/dipolvere.html
+++ b/dipolvere.html
@@ -19,7 +19,7 @@
 </h1>
 
         <p class="job_text">
-            Welcome to FiLM di POLVERE, a bespoke business website tailored to spotlight our client's exceptional filmography portfolio. Dive into a world of creativity and storytelling where every frame tells a unique narrative. From captivating documentaries to visually stunning narratives, each project featured here reflects our client's distinct vision and filmmaking expertise.
+            Welcome to FiLM di POLVERE, a unique business website tailored to spotlight my client's filmography portfolio. From captivating documentaries to visually stunning narratives, each project featured here reflects our client's distinct vision and filmmaking expertise.
 <br><br>
             </p>
             <div class="boxforpic">
@@ -30,7 +30,7 @@ FiLM di POLVERE offers an immersive journey, showcasing engaging visuals and com
 <br><br>
 Embracing the client's 'randomness' theme, I crafted a bold website that reimagines user interaction. Menus shuffle on every refresh, creating an unpredictable yet engaging experience across all pages, including those housing videos and articles. This unconventional design, predominantly driven by JavaScript, showcases the limitless possibilities of creativity in digital expression. It's a testament to breaking free from norms, inviting clients to explore the extraordinary."
         <br><br>
-            You can view the website <a href="https://film-di-polvere.com" target="_blank">here (keep in mind this site faces glitches when using Firefox browser).</a>
+            You can view the website <a href="https://film-di-polvere.com" target="_blank">here (keep in mind this site is buggy on Firefox browser).</a>
         </p>
 
 
