--- a/romast.html
+++ b/romast.html
@@ -24,5 +24,7 @@
 </p>
 
 <div class="boxforpic">
-    <img src="romast.png"class="infopic">
+    <img src="romaanno2.png"class="infopic">
+    <img src="romaanno1.png"class="infopic">
+    <img src="romaanno.png"class="infopic">
 </div>
