--- a/arabica.html
+++ b/arabica.html
@@ -15,52 +15,21 @@
     </header>    
 
 <h1 class="job_title">
-    National Fire Industry <br>Association (NFIA)
+    Arabica Coffee Campaign
 </h1>
         <p class="job_text">
-            The National Fire Industry Association, Australia (NFIA) is the peak Fire Protection Industry Association of Australia. NFIA stands for high standards, a great industry and works with Members to achieve success. During my time there, I worked as a UX/UI designer and graphic designer at their office in Ascot, creating web pages, kinetic designs, PowerPoints, videos, managing social media and more.
+            This assessment required me to design and present three persuasive campaign images for my designed brand. The design of this campaign was based on my understanding of rhetorical communication, developing a cohesive and compelling marketing message that appealed to your target audience. <br><br>
+            <a href="ARABICA_CAMPAIGN.pdf" target="_blank">Download the document here.</a>
         <br><br>
-            You can view their website <a href="https://nfia.com.au" target="_blank">here.</a>
         </p>
 
-<div class="divider">
-    <div class="column">
-        <h3>RESPONSIBILITIES</h3>
-        <li>Maintaining the NFIA Wordpress Site</li>
-        <li>Ensuring the NFIA website is secure and backed up frequently</li>
-        <li>Ensuring UX/UI is up to standard and easy for customers to navigate</li>
-        <li>Using web development knowledge in order to solve bugs and issues</li>
-        <li>Creating motion graphics and advertising campaigns</li>
-        <li>Writing and publishing social media posts</li>
-        <li>Filming and editing promotional videos and photos</li>
-        <li>Using Adobe prorgrams such as inDesign, Photoshop, After Effects and more.</li>
-        <li>Creating posters, flyers and other marketing/design material</li>
-        <li>Using ActiveCampaign to create marketing campaigns, send out emails and manage customers</li>
-        <li>Other general housekeeping tasks</li>            <br><br>
-    </div>
-
-
-    <div class="columnright">
-        <h3>REFERENCES</h3>
-        <li><b>Adrian Shackleton,</b> Previous CEO<br>
-            0431 091 424</li>
-
-        <li><b>Trish Pezet,</b> Previous Accounting<br>
-                0428 143 425<br>triciasenterprises@bigpond.com</li>
-
-        <li><b>Kellie Smith, </b>General Manager<br>
-                    0417 337 346</li>
 
     </div>
 </div>
 
 <div class="boxforpic">
-    <img src="nfiapic.png"class="infopic">
+    <img src="arabicamock.png"class="infopic">
 </div>
-
-        <p class="job_text">
-        My main role was to maintain the NFIA Wordpress site which involved ensuring plugins were updated, ensuring search optimisation and creating posts/articles/new web pages. I was also responsible for the health of the website, as well as some social media maintenance. I used active campaign in order to keep track of customers and create marketing campaigns and send out emails. I also created promotional videos for NFIA, including motion graphics for logos and general video editing.
-        </p>
 
 
 </body>
