--- a/brisrail.html
+++ b/brisrail.html
@@ -20,17 +20,18 @@
         <p class="job_text">
             In 2022, I created a user interface for a hypothetical service where tax-payers were given the opportunity to decide where the money spent on Brisbane Rail is invested towards. To create the fully functioning prototype, I used Figma, and this can be interacted with below.
         <br><br>
-        We had to consider a range of elements, such as the accessibility of the interface, how categories were sorted, and the overall flow of the program. We also created a document that explained the process and our design decisions, and this can be accessed here.
+        I had to consider a range of elements, such as the accessibility of the interface, how categories were sorted, and the overall flow of the program. I also created a document that explained the process and our design decisions.<br><br>
+        <a href="brisraildoc.pdf" target="_blank">Download the document here.</a>
         </p>
+       
 
-<div class="boxforpic">
-    <img src="nfiapic.png"class="infopic">
+</body>
+<div id="iframe-container">
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FcO8VOHH0rDkCE6RkDBjGwm%2Fdxb110-a2-wireframes-(Copy)%3Ftype%3Ddesign%26node-id%3D2-34%26t%3DrPQGyp9DRCDFbgEJ-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D2%253A34%26show-proto-sidebar%3D1%26mode%3Ddesign" allowfullscreen></iframe>
 </div>
-
-        <p class="job_text">
-        My main role was to maintain the NFIA Wordpress site which involved ensuring plugins were updated, ensuring search optimisation and creating posts/articles/new web pages. I was also responsible for the health of the website, as well as some social media maintenance. I used active campaign in order to keep track of customers and create marketing campaigns and send out emails. I also created promotional videos for NFIA, including motion graphics for logos and general video editing.
-        </p>
-
+<div class="boxforpic">
+    <img src="ui.png" class="infopic">
+</div>
 
 </body>
 
