--- a/tcc.html
+++ b/tcc.html
@@ -20,7 +20,7 @@
         <p class="job_text">
             I briefly worked as a graphic designer and website manager for the Career Conversation in 2022.
         <br><br>
-            You can view their website <a href="https://nfia.com.au" target="_blank">here.</a>
+            You can view their website <a href="https://www.thecareerconversation.com/" target="_blank">here.</a>
         </p>
 
 <div class="divider">
@@ -42,13 +42,9 @@
     </div>
 </div>
 
-<div class="boxforpic">
-    <img src="nfiapic.png"class="infopic">
-</div>
-
 
 </body>
 
 <footer>
-    Sabrina's Studio ® 2023
+    Sabrina's Studio ® 2023  
 </footer>
